--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,27 @@
 {% extends 'layout.html' %}
 
 {% block head %}
-<script src="{{ url_for('static', filename='*.js') }}" defer></script>
+<script src="{{ url_for('static', filename='js/main.js') }}" defer></script>
 {% endblock %}
 <body>
 {% block content %}
+    <div><h1>Welcome to Rikkiki!</h1>
+        <button id="button">Game rules</button>
+        <div id="rules">
+            <ol>
+                <li>Aim To win the most points by accurately predicting how many tricks you'll get in each round</li>
+                <li>The dealer takes a card from remaining deck and place it in the middle.</li>
+                <li>Players begin to bid how many tricks they can take.</li>
+                <li>Play begins: you must put same color on top of trump.</li>
+                <li>The hand will be won by the highest card.</li>
+                <li>If you do not have the color, you can place your trump down or place place down any card.</li>
+                <li>Once all cards have been played, the dealer tallies up the score.</li>
+                <li> If a player takes the exact number of tricks he bid, he receives 10 points, plus the number he bid.</li>
+                <li>If a player takes any other number of tricks, he receives no points.</li>
+            </ol>
+        </div>
+    </div>
+
+
 {% endblock %}
 </body>
