--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -6,10 +6,11 @@
 {% endblock %}
 
 {% block content %}
+    <div class="body">
     <div class="welcome"><h1>Welcome to Rikkiki!</h1>
         <button id="button">Game rules</button>
         <div id="rules">
-            <ol>
+            <ul>
                 <li>Aim To win the most points by accurately predicting how many tricks you'll get in each round</li>
                 <li>The dealer takes a card from remaining deck and place it in the middle.</li>
                 <li>Players begin to bid how many tricks they can take.</li>
@@ -17,9 +18,9 @@
                 <li>The hand will be won by the highest card.</li>
                 <li>If you do not have the color, you can place your trump down or place place down any card.</li>
                 <li>Once all cards have been played, the dealer tallies up the score.</li>
-                <li> If a player takes the exact number of tricks he bid, he receives 10 points, plus the number he bid.</li>
+                <li>If a player takes the exact number of tricks he bid, he receives 10 points, plus the number he bid.</li>
                 <li>If a player takes any other number of tricks, he receives no points.</li>
-            </ol>
+            </ul>
         </div>
     </div>
     <div>
@@ -37,5 +38,5 @@
             <button type="submit" value="Submit">We are ready!</button>
         </form>
     </div>
-
+    </div>
 {% endblock %}
