--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,6 +4,7 @@
     width: 960px;
     height: 700px;
     margin: auto;
+    max-width: 960px;
 }
 
 #left {
@@ -48,4 +49,8 @@
 
 img.turn-card {
     width: 70px;
+}
+
+body {
+    overflow:visible !important;
 }
