--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,6 @@
 
 {% block head %}
 <script src="{{ url_for('static', filename='js/game.js') }}" type="text/javascript" defer></script>
-<script src="{{ url_for('static', filename='js/game.js') }}" defer></script>
 <script src="{{ url_for('static', filename='js/bootstrap.js') }}" defer></script>
 <script src="{{ url_for('static', filename='js/cards.js') }}" type="text/javascript" defer></script>
 <script src="{{ url_for('static', filename='js/cards-ko.js') }}" type="text/javascript"></script>
@@ -25,63 +24,10 @@
         <img class='turn-card' src='../static/images/cards/BLUE_BACK.svg'>
       </div>
     </div>
-    <div class="hand fan" id="top">
-       <img class='card' src='../static/images/cards/BLUE_BACK.svg'>
-       <img class='card' src='../static/images/cards/BLUE_BACK.svg'>
-       <img class='card' src='../static/images/cards/BLUE_BACK.svg'>
-       <img class='card' src='../static/images/cards/BLUE_BACK.svg'>
-       <img class='card' src='../static/images/cards/BLUE_BACK.svg'>
-       <img class='card' src='../static/images/cards/BLUE_BACK.svg'>
-       <img class='card' src='../static/images/cards/BLUE_BACK.svg'>
-       <img class='card' src='../static/images/cards/BLUE_BACK.svg'>
-       <img class='card' src='../static/images/cards/BLUE_BACK.svg'>
-       <img class='card' src='../static/images/cards/BLUE_BACK.svg'>
-       <img class='card' src='../static/images/cards/BLUE_BACK.svg'>
-    </div>
-    <div class="hand fan" id="left">
-       <img class='card' src='../static/images/cards/BLUE_BACK.svg'>
-       <img class='card' src='../static/images/cards/BLUE_BACK.svg'>
-       <img class='card' src='../static/images/cards/BLUE_BACK.svg'>
-       <img class='card' src='../static/images/cards/BLUE_BACK.svg'>
-       <img class='card' src='../static/images/cards/BLUE_BACK.svg'>
-       <img class='card' src='../static/images/cards/BLUE_BACK.svg'>
-       <img class='card' src='../static/images/cards/BLUE_BACK.svg'>
-       <img class='card' src='../static/images/cards/BLUE_BACK.svg'>
-       <img class='card' src='../static/images/cards/BLUE_BACK.svg'>
-       <img class='card' src='../static/images/cards/BLUE_BACK.svg'>
-       <img class='card' src='../static/images/cards/BLUE_BACK.svg'>
-    </div>
-    <div class="hand fan" id="right">
-       <img class='card' src='../static/images/cards/BLUE_BACK.svg'>
-       <img class='card' src='../static/images/cards/BLUE_BACK.svg'>
-       <img class='card' src='../static/images/cards/BLUE_BACK.svg'>
-       <img class='card' src='../static/images/cards/BLUE_BACK.svg'>
-       <img class='card' src='../static/images/cards/BLUE_BACK.svg'>
-       <img class='card' src='../static/images/cards/BLUE_BACK.svg'>
-       <img class='card' src='../static/images/cards/BLUE_BACK.svg'>
-       <img class='card' src='../static/images/cards/BLUE_BACK.svg'>
-       <img class='card' src='../static/images/cards/BLUE_BACK.svg'>
-       <img class='card' src='../static/images/cards/BLUE_BACK.svg'>
-       <img class='card' src='../static/images/cards/BLUE_BACK.svg'>
-    </div>
-    <div class="hand fan" id="player">
-
-       <img class='card' src='../static/images/cards/AS.svg'>
-       <img class='card' src='../static/images/cards/KS.svg'>
-       <img class='card' src='../static/images/cards/QS.svg'>
-       <img class='card' src='../static/images/cards/JS.svg'>
-       <img class='card' src='../static/images/cards/10S.svg'>
-       <img class='card' src='../static/images/cards/9H.svg'>
-       <img class='card' src='../static/images/cards/3H.svg'>
-       <img class='card' src='../static/images/cards/10D.svg'>
-       <img class='card' src='../static/images/cards/4D.svg'>
-       <img class='card' src='../static/images/cards/2D.svg'>
-       <img class='card' src='../static/images/cards/8C.svg'>
-       <img class='card' src='../static/images/cards/7C.svg'>
-       <img class='card' src='../static/images/cards/6C.svg'>
-    </div>
+    <div class="hand fan" id="top"></div>
+    <div class="hand fan" id="left"></div>
+    <div class="hand fan" id="right"></div>
+    <div class="hand fan" id="player"></div>
 </div>
-
-
 {% endblock %}
 </body>
