--- a/static/css/cards.css
+++ b/static/css/cards.css
@@ -56,10 +56,10 @@ img.card {
 	padding-top: 10px;
 }
 .hhand-compact img.card { 
-	margin-left: -52px;
+	margin-left: -69.7px;
 	padding-top: 10px;
 }
-.hhand-compact.active-hand img.card:hover { 
+.hhand-compact.active-hand img.card:hover {
 	padding-top: 0px;
 	padding-bottom: 10px;
 }
@@ -95,7 +95,7 @@ img.card {
 .fan {
 	display: inline-block;
 	vertical-align: top;
-	position: relative;
+	position: absolute;
 	padding-bottom: 1em;
 }
 .fan img.card { 
