add eventListener to func displayPlayerHands

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,16 +19,16 @@
     <div class="trump hhand-compact"></div>
     <div class="deck hand hhand-compact"></div>
     <div id="turn">
-      <div class="border">
-        <img class='turn-card' src='../static/images/cards/BLUE_BACK.svg'>
+      <div class="border turn-card" id="1place">
+
       </div>
-      <div class="border">
+      <div class="border turn-card" id="2place">
       </div>
-      <div class="border">
-        <img class='turn-card' src='../static/images/cards/BLUE_BACK.svg'>
+      <div class="border turn-card" id="3place">
+
       </div>
-      <div class="border">
-        <img class='turn-card' src='../static/images/cards/BLUE_BACK.svg'>
+      <div class="border turn-card" id="4place">
+
       </div>
     </div>
     <div class="hand fan" id="top"></div>
