Modify Bet-input request

--- a/templates/index.html
+++ b/templates/index.html
@@ -46,5 +46,10 @@
     <div id="player4" data-name="{{ player4 }}">
     </div>
 </div>
+<div>
+    <label for="bets">Make your bet:</label><br>
+    <input id="bets" type="text"required>
+    <button>Ok</button>
+</div>
 {% endblock %}
 </body>
