Create Hand Card Check

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,15 +19,16 @@
     <div class="trump hhand-compact"></div>
     <div class="deck hand hhand-compact"></div>
     <div id="turn">
-      <div class="border turn-card" id="1place">
+      <div class="border turn-card" id="first">
 
       </div>
-      <div class="border turn-card" id="2place">
-      </div>
-      <div class="border turn-card" id="3place">
+      <div class="border turn-card" id="second">
 
       </div>
-      <div class="border turn-card" id="4place">
+      <div class="border turn-card" id="third">
+
+      </div>
+      <div class="border turn-card" id="fourth">
 
       </div>
     </div>
