--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -12,14 +12,15 @@
         <div id="rules">
             <ul>
                 <li>Aim To win the most points by accurately predicting how many tricks you'll get in each round</li>
-                <li>The dealer takes a card from remaining deck and place it in the middle.</li>
+                <li>The dealer deals the cards.</li>
+                <li>The dealer takes a card from remaining deck and place it down. That is the trump card.</li>
                 <li>Players begin to bid how many tricks they can take.</li>
-                <li>Play begins: you must put same color on top of trump.</li>
-                <li>The hand will be won by the highest card.</li>
-                <li>If you do not have the color, you can place your trump down or place place down any card.</li>
+                <li>Play begins: you must place same color as the first player in turn.</li>
+                <li>If you do not have the same color, you can either put a trump or anything.</li>
+                <li>The hand will be won by the highest card or who places trump down.</li>
                 <li>Once all cards have been played, the dealer tallies up the score.</li>
-                <li>If a player takes the exact number of tricks he bid, he receives 10 points, plus the number he bid.</li>
-                <li>If a player takes any other number of tricks, he receives no points.</li>
+                <li>If a player takes the exact number of tricks he bid, he receives 10 points, plus twice number he bid.</li>
+                <li>If a player takes any other number of tricks, he will be deducted points.</li>
             </ul>
         </div>
     </div>
