set default data attribute

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
     <div class="hand fan" id="top"></div>
     <div class="hand fan" id="left"></div>
     <div class="hand fan" id="right"></div>
-    <div class="hand fan" id="player" data-player="Player1"></div>
+    <div class="hand fan" id="player" data-player="Player1" data-turn="1"></div>
 </div>
 <div id="score-table">
     <div id="player1" data-name="{{ player1 }}">
