--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,13 +18,13 @@
 
 #left {
     position: absolute;
-    left: 0;
+    left: 10px;
     top: 40%;
 }
 
 #right {
     position: absolute;
-    right: 0;
+    right: 10px;
     top: 40%;
 }
 
@@ -62,16 +62,52 @@ img.turn-card {
 
 body {
     overflow:visible !important;
+    background-image: url("../images/poker.jpg");
+    margin-top: -20px;
+    margin-bottom: -20px;
+    background-repeat: repeat;
 }
 
 .round {
     width: 960px;
     height: 100px;
     margin: auto;
-    background-color: orange;
+    background-color: white;
 }
 
 #player-turn {
     font-size: 50px;
     text-align: center;
 }
+
+#score-table {
+    width: 960px;
+    margin: auto;
+    background-color: white;
+}
+
+#player1, #player2, #player3, #player4 {
+    width : 240px;
+    float: left;
+    text-align: center;
+    background-color: white;
+    font-weight: bold;
+    border-right: solid black 1px;
+}
+
+h1 {
+    padding-top: 20px;
+    font-family: 'Consolas', 'Monaco', 'Bitstream Vera Sans Mono', monospace;
+}
+
+#bet-block {
+    position: absolute;
+    top: 400px;
+    left: 100px;
+    background-color: white;
+    padding: 20px;
+    border-radius: 5px;
+    border: solid red 3px;
+}
+
+.hidden {display: none}
