--- a/templates/index.html
+++ b/templates/index.html
@@ -36,25 +36,25 @@
     <div class="hand fan" id="player" data-player="Player1" data-turn="1" data-round="0" data-cardnumber="1"></div>
 </div>
 <div id="score-table">
-    <div id="player1" data-name="{{ player1 }}">
+    <div id="player1" class="player1" data-name="{{ player1 }}">
         <p>{{ player1 }} (player1)</p>
         <p>Bets: <span id="scores-table-bets1"></span></p>
         <p>Scores: <span id="scores-table-scores1"></span></p>
         <p>Rounds won: <span id="scores-table-bets-won1"></span></p>
     </div>
-    <div id="player2" data-name="{{ player2 }}">
+    <div id="player2" class="player2" data-name="{{ player2 }}">
         <p>{{ player2 }} (player2)</p>
         <p>Bets: <span id="scores-table-bets2"></span></p>
         <p>Scores: <span id="scores-table-scores2"></span></p>
         <p>Rounds won: <span id="scores-table-bets-won2"></span></p>
     </div>
-    <div id="player3" data-name="{{ player3 }}">
+    <div id="player3" class="player3" data-name="{{ player3 }}">
         <p>{{ player3 }} (player3)</p>
         <p>Bets: <span id="scores-table-bets3"></span></p>
         <p>Scores: <span id="scores-table-scores3"></span></p>
         <p>Rounds won: <span id="scores-table-bets-won3"></span></p>
     </div>
-    <div id="player4" data-name="{{ player4 }}">
+    <div id="player4" class="player4" data-name="{{ player4 }}">
         <p>{{ player4 }} (player4)</p>
         <p>Bets: <span id="scores-table-bets4"></span></p>
         <p>Scores: <span id="scores-table-scores4"></span></p>
