--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -7,7 +7,7 @@
 
 {% block content %}
     <div class="body">
-    <div class="welcome"><h1>Welcome to Rikkiki!</h1>
+    <div class="welcome"><h1>Welcome to Rikiki!</h1>
         <button id="button">Game rules</button>
         <div id="rules">
             <ul>
