set input type to number

--- a/templates/index.html
+++ b/templates/index.html
@@ -62,8 +62,8 @@
 
 <div id="bet-block">
     <label for="bets">Make your bet:</label><br>
-    <input id="bets" type="text"required>
-    <button>Ok</button>
+    <input id="bets" type="number" required>
+    <button class="bet-button">Ok</button>
 </div>
 {% endblock %}
 </body>
