add inline style to rules

--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -9,7 +9,7 @@
     <div class="body">
     <div class="welcome"><h1>Welcome to Rikiki!</h1>
         <button id="button">Game rules</button>
-        <div id="rules">
+        <div id="rules" style="display: none;">
             <ul>
                 <li>Aim To win the most points by accurately predicting how many tricks you'll get in each round</li>
                 <li>The dealer deals the cards.</li>
